src/test/compile-fail/spawn-non-nil-fn.rs
// error-pattern: mismatched types

use std;
import std::task;

fn f(x: int) -> int { ret x; }

fn main() { task::_spawn(bind f(10)); }
